5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1643_2704.log
== TEST (2019-04-15 16:42:23) 
-- CODE:
n = float(input("nota do aluno:"))
mens = input("bonificacao:")
if(n>6)
-- ERROR:
File "XXXX", line 3
    if(n>6)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:42:52) 
-- CODE:
n = float(input("nota do aluno:"))
mens = input("bonificacao:")
if(n>=6)
-- ERROR:
File "XXXX", line 3
    if(n>=6)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:43:32) 
-- CODE:
nota = float(input("nota do aluno:"))
mens = input("bonificacao:")
if(nota >= 6)
-- ERROR:
File "XXXX", line 3
    if(nota >= 6)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:43:48) 
-- CODE:
nota = float(input("nota do aluno:"))
mens = input("bonificacao:")
if("nota" >= 6)
-- ERROR:
File "XXXX", line 3
    if("nota" >= 6)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
